# buttoning

./: ARCHITECTURE.md  BUILD_WINDOWS.md  CONVERSION_SUMMARY.md  QUICK_REFERENCE.md  README.md  build_buttoning.bat
src/buttoning_msgs/: CMakeLists.txt  package.xml
src/buttoning_msgs/msg/: Detection.msg  HandLandmarks.msg  RobotCommand.msg
src/buttoning_system/: BUILD  CMakeLists.txt  COMPARISON.md  LIBTORCH_SETUP.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README_LIBTORCH.md  README_MEDIAPIPE.md  README_SORT_TRACKER.md  SORT_TRACKER_README.md  SUMMARY.md  TENSOR_API.md  WHY_TORCHVISION_IOU.md  mediapipe_quick_reference.cpp  package.xml
src/buttoning_system/config/: arm_params.yaml  detection_params.yaml  realsense_params.yaml
src/buttoning_system/include/buttoning_system/: arm_controller_node.hpp  detection_node.hpp  hand_detection_node.hpp  realsense_node.hpp  sort_tracker.hpp  sort_tracker_libtorch.hpp
src/buttoning_system/launch/: buttoning_system.launch.py  detection_only.launch.py  realsense.launch.py
src/buttoning_system/src/: arm_controller_node.cpp  detection_node.cpp  hand_detection_node.cpp  mediapipe_hand_test.cpp  realsense_node.cpp  sort_tracker.cpp  sort_tracker_example.cpp  sort_tracker_libtorch.cpp  test_libtorch_sort.cpp
